<?xml version="1.0" encoding="utf-8"?>

<!-- Vertical Layout -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/studentName1"
        style="@style/RobotoWhiteFontTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/studentName2"
        app:layout_constraintHorizontal_bias="0.877"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.933" />

    <TextView
        android:id="@+id/studentName2"
        style="@style/RobotoWhiteFontTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.933" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="366dp"
        android:layout_height="175dp"
        android:layout_marginTop="84dp"
        android:src="@drawable/main_logo"
        android:contentDescription="@string/imageLogoText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topSeperator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="365dp" />


    <TextView
        android:id="@+id/greetingMessage"
        style="@style/RobotoWhiteFontTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greetingMessage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topSeperator"
        app:layout_constraintVertical_bias="0.098" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"

        android:background="@drawable/search_button"
        android:clickable="true"
        android:iconifiedByDefault="false"


        android:inputType="textNoSuggestions"
        android:layoutDirection="rtl"
        android:queryHint="Search"

        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/topSeperator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.637">

    </SearchView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:divider="@drawable/divider"
        android:gravity="center"
        android:showDividers="middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greetingMessage"
        app:layout_constraintVertical_bias="0.028">

        <Button
            android:id="@+id/bitCoinBtn"
            style="@style/RobotoWhiteFontTextSmallerStyle"
            android:layout_width="75dp"
            android:layout_height="45dp"
            android:background="@drawable/category_button"
            android:onClick="bitCoinSearch"
            android:text="@string/popularBtnText1">

        </Button>

        <Button
            style="@style/RobotoWhiteFontTextSmallerStyle"
            android:layout_width="75dp"
            android:layout_height="45dp"
            android:background="@drawable/category_button"
            android:onClick="usaSearch"
            android:text="@string/popularBtnText2"></Button>

        <Button
            style="@style/RobotoWhiteFontTextSmallerStyle"
            android:layout_width="75dp"
            android:layout_height="45dp"
            android:background="@drawable/category_button"
            android:onClick="trumpSearch"
            android:text="@string/popularBtnText3"></Button>

        <Button
            style="@style/RobotoWhiteFontTextSmallerStyle"
            android:layout_width="75dp"
            android:layout_height="45dp"
            android:background="@drawable/category_button"
            android:onClick="covid19Search"
            android:text="@string/popularBtnText4"></Button>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

